--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ But it must have the following features:
   </div>
 
   <h1>HIRE ME</h1>
-  <h3>Not because I need the money. But Because I WANT it!</h3>
+  <h3>Not because I need the money. But Because I <span>WANT<span> it!</h3>
   
 </body>
 </html>
